[package]
name = "my-tidy-os"
version = "0.1.0"
authors = ["8176135 <elsecaller@8176135.xyz>"]
edition = "2018"

# Specificed in the .json llvm file
#
#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
			"-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 60          # (in seconds)

[dependencies]
bootloader = "*"
volatile = "*"
x86_64 = "*"
# Serial Port interface chip
uart_16550 = "*"
pic8259_simple = "*"
pc-keyboard = "*"
lazy_static = { version = "*", features = ["spin_no_std"]}
spin = "*"