[package]
name = "my-tidy-os"
version = "0.1.0"
authors = ["8176135 <elsecaller@8176135.xyz>"]
edition = "2018"

# Specificed in the .json llvm file
#
#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[profile.release]
debug = true

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-S", "-gdb", "tcp::9009"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
			"-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 60          # (in seconds)

[dependencies]
bootloader = { version = "*", features = ["map_physical_memory"]}
volatile = "*"
x86_64 = "*"

# Serial Port interface chip
uart_16550 = "*"
pic8259_simple = "*"
pc-keyboard = "*"
# backtrace =  { version = "*", default-features = false }
lazy_static = { version = "*", features = ["spin_no_std"]}
# Quality of life for building enum from number
num_enum = { version = "*", default-features = false}
spin = "*"